Adding Overlay in Recent Collections

--- a/index.html
+++ b/index.html
@@ -926,25 +926,45 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/fruits/apple.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Apple</div>
+                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/blueberry.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Blueberry</div>
+                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/cherry.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Cherry</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="card-wrapper container-sm">
                                 <div class="card">
-                                    <img src="img/vegetables/bean-seed.jpg" class="card-img-top" alt="collection-images">
+                                    <img src="img/vegetables/bean-seed.jpg" class="card-img-top" 
+                                    alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Bean Seed</div>
+                                    </div>
                                 </div>
                                 <div class="card">
-                                    <img src="img/vegetables/broccoli.jpg" class="card-img-top" alt="collection-images">
+                                    <img src="img/vegetables/broccoli.jpg" class="card-img-top" 
+                                    alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Broccoli</div>
+                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/cabbage.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Cabbage</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -952,25 +972,45 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/fruits/date.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Date</div>
+                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/grape-black.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Grape Black</div>
+                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/grape.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Grape</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="card-wrapper container-sm">
                                 <div class="card">
-                                    <img src="img/vegetables/capsicum.jpg" class="card-img-top" alt="collection-images">
+                                    <img src="img/vegetables/capsicum.jpg" class="card-img-top" 
+                                    alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Capsicum</div>
+                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/carrot.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Carrot</div>
+                                    </div>
                                 </div>
                                 <div class="card">
-                                    <img src="img/vegetables/cauliflower.jpg" class="card-img-top" alt="collection-images">
+                                    <img src="img/vegetables/cauliflower.jpg" class="card-img-top" 
+                                    alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Cauliflower</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -990,25 +1030,46 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/fruits/kiwi.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Kiwi</div>
+                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/lemon.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Lemon</div>
+                                    </div>
                                 </div>
                                 <div class="card">
-                                    <img src="img/fruits/local-orange.jpg" class="card-img-top" alt="collection-images">
+                                    <img src="img/fruits/local-orange.jpg" class="card-img-top" 
+                                    alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Local Orange</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="card-wrapper container-sm">
                                 <div class="card">
-                                    <img src="img/vegetables/chili-local.jpg" class="card-img-top" alt="collection-images">
+                                    <img src="img/vegetables/chili-local.jpg" class="card-img-top" 
+                                    alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Chili Local</div>
+                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/chili.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Chili</div>
+                                    </div>
                                 </div>
                                 <div class="card">
-                                    <img src="img/vegetables/motorshuti.jpg" class="card-img-top" alt="collection-images">
+                                    <img src="img/vegetables/motorshuti.jpg" class="card-img-top" 
+                                    alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Motorshuti</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1016,25 +1077,46 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/fruits/mango.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Mango</div>
+                                    </div>
                                 </div>
                                 <div class="card">
-                                    <img src="img/fruits/orange-green.jpg" class="card-img-top" alt="collection-images">
+                                    <img src="img/fruits/orange-green.jpg" class="card-img-top" 
+                                    alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Orange Green</div>
+                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/orange.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Orange</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="card-wrapper container-sm">
                                 <div class="card">
-                                    <img src="img/vegetables/cucumber.jpg" class="card-img-top" alt="collection-images">
+                                    <img src="img/vegetables/cucumber.jpg" class="card-img-top" 
+                                    alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Cucumber</div>
+                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/lemon.jpg" class="card-img-top" alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Lemon</div>
+                                    </div>
                                 </div>
                                 <div class="card">
-                                    <img src="img/vegetables/long-bean.jpg" class="card-img-top" alt="collection-images">
+                                    <img src="img/vegetables/long-bean.jpg" class="card-img-top" 
+                                    alt="collection-images">
+                                    <div class="overlay">
+                                        <div class="text">Long Bean</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
