--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
                                     <form>
                                         <div class="mb-3">
                                             <input type="text" class="form-control" id="Text" 
-                                            aria-describedby="textHelp" placeholder="Username"> 
+                                            aria-describedby="textHelp" placeholder="Username" required> 
                                         </div>
                                         <div class="mb-3">
                                             <input type="email" class="form-control" id="Email" 
-                                            aria-describedby="emailHelp" placeholder="Email">
+                                            aria-describedby="emailHelp" placeholder="Email" required>
                                         </div>
                                         <div class="mb-3">
                                             <input type="password" class="form-control" 
-                                            id="Password" placeholder="Password">
+                                            id="Password" placeholder="Password" required>
                                         </div>
                                         <button type="submit" class="btn btn-primary">Create An Account</button>
                                         <p class="signin-link">Already have an Account ? <a href="#">Sign In</a></p>
@@ -155,11 +155,11 @@
                                     <form>
                                         <div class="mb-3">
                                             <input type="text" class="form-control" id="Text" 
-                                            aria-describedby="textHelp" placeholder="Username">
+                                            aria-describedby="textHelp" placeholder="Username" required>
                                         </div>
                                         <div class="mb-3">
                                             <input type="password" class="form-control" 
-                                            id="Password" placeholder="Password">
+                                            id="Password" placeholder="Password" required>
                                         </div>
                                         <p class="forgot-link"><a href="#">Forgot Your Password ?</a></p>
                                         <button type="submit" class="btn btn-primary">Login</button>
@@ -2722,7 +2722,7 @@
                                 </div>
                                 <div class="calculate-total-amount">
                                     <h2>Total Amount: </h2>
-                                    <p><span>000</span> Tk.</p>
+                                    <p><span>000</span> ₱</p>
                                 </div>
                             </div>
                             <div class="confirm-order-button">
