Changing Tk to Pesos in Great Deals Section

--- a/index.html
+++ b/index.html
@@ -2817,12 +2817,12 @@
                                 </div>
                                 <div class="gd-price-and-discount">
                                     <div class="gd-price-box">
-                                        <h2><span class="gd-price">48</span><span class="gd-unit">Tk/kg</span></h2>
+                                        <h2><span class="gd-price">48</span><span class="gd-unit">₱/kg</span></h2>
                                     </div>
                                     <div class="gd-discount-box">
                                         <p><span class="gd-discount">20% off</span></p>
                                         <p><del><span class="gd-price-del">60</span><span
-                                                    class="gd-unit-del">Tk/kg</span></del>
+                                                    class="gd-unit-del">₱/kg</span></del>
                                         </p>
                                     </div>
                                 </div>
@@ -2885,12 +2885,12 @@
                                 </div>
                                 <div class="gd-price-and-discount">
                                     <div class="gd-price-box">
-                                        <h2><span class="gd-price">48</span><span class="gd-unit">Tk/kg</span></h2>
+                                        <h2><span class="gd-price">48</span><span class="gd-unit">₱/kg</span></h2>
                                     </div>
                                     <div class="gd-discount-box">
                                         <p><span class="gd-discount">20% off</span></p>
                                         <p><del><span class="gd-price-del">60</span><span
-                                                    class="gd-unit-del">Tk/kg</span></del>
+                                                    class="gd-unit-del">₱/kg</span></del>
                                         </p>
                                     </div>
                                 </div>
@@ -2956,12 +2956,12 @@
                                 </div>
                                 <div class="gd-price-and-discount">
                                     <div class="gd-price-box">
-                                        <h2><span class="gd-price">50</span><span class="gd-unit">Tk/kg</span></h2>
+                                        <h2><span class="gd-price">50</span><span class="gd-unit">₱/kg</span></h2>
                                     </div>
                                     <div class="gd-discount-box">
                                         <p><span class="gd-discount">20% off</span></p>
                                         <p><del><span class="gd-price-del">60</span><span
-                                                    class="gd-unit-del">Tk/kg</span></del>
+                                                    class="gd-unit-del">₱/kg</span></del>
                                         </p>
                                     </div>
                                 </div>
@@ -3517,7 +3517,7 @@
                     <div class="call-to-action-details">
                         <p class="cta-save-per">Save Upto 50%</p>
                         <h1 class="cta-offer-title">Fresh Mutton</h1>
-                        <h1 class="cta-offer-price">430Tk Only</h1>
+                        <h1 class="cta-offer-price">430₱ Only</h1>
                         <p class="cta-offer-msg">OFFER AVAILABLE ALL MEAT & FISH</p>
                         <p class="cta-product-type">Meat & Fish</p>
                         <div class="cta-button-area">
@@ -3552,8 +3552,8 @@
                                 <h2>Information</h2>
                                 <div class="contact-address">
                                     <span class="icon-map-marked-alt"></span>
-                                    <p>North Tower, 5th Floor,<br>
-                                        2125 Hudson St, NY 2577</p>
+                                    <p>Address<br>
+                                        Address</p>
                                 </div>
                                 <div class="contact-mail">
                                     <span class="icon-envelope"></span>
@@ -3751,7 +3751,7 @@
                 </div>
                 <div class="copyright-text text-center p-3 font-styling">
                     © 2020 Copyright:
-                    <a class="text-white font-styling" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+                    <a class="text-white font-styling" href="https://mdbootstrap.com/">Badad_Verdida_Acal</a>
                 </div>
             </footer>
         </div>
